--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- Шаблон кнопки «Показать ещё» — мы подставляем эту кнопку в конец списка карточек каждый раз, -->
     <!-- Когда доступны дополнительные видео. Нажатие на эту кнопку подгружает пять дополнительных карточек.-->
     <template class="more-button-template">
-      <li><button class="button more-button">Показать еще</button></li>
+      <li><button class="button more-button">Показать ещё</button></li>
     </template>
 
     <!-- Шаблон блока с ошибкой — в зависимости от типа ошибки, мы выбираем текст для неё, -->
